--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -35,7 +35,7 @@
 
     function downloadPDF() {
 
-        var pdfURL = 'src/documents/VICTOR NORIEGA HOJA DE VIDA.pdf';
+        var pdfURL = 'public/documents/VICTOR NORIEGA HOJA DE VIDA.pdf';
         
         var link = document.createElement('a');
         link.href = pdfURL;
