--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -39,7 +39,7 @@
         
         var link = document.createElement('a');
         link.href = pdfURL;
-        link.download = 'VICTOR NORIEGA HDV.pdf';
+        link.download = 'VICTOR NORIEGA HDV';
         
         document.body.appendChild(link);
 
