--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -35,11 +35,11 @@
 
     function downloadPDF() {
 
-        var pdfURL = 'public/documents/VICTOR NORIEGA HOJA DE VIDA.pdf';
+        var pdfURL = 'public/victornoriega.pdf';
         
         var link = document.createElement('a');
         link.href = pdfURL;
-        link.download = 'VICTOR NORIEGA HDV';
+        link.download = 'victornoriegaHDV.pdf';
         
         document.body.appendChild(link);
 
