--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -35,7 +35,7 @@
 
     function downloadPDF() {
 
-        var pdfURL = 'public/victornoriega.pdf';
+        var pdfURL = 'https://portfolio-victornoriega.vercel.app/public/victornoriega.pdf';
         
         var link = document.createElement('a');
         link.href = pdfURL;
