--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -9,7 +9,7 @@
                     Desarrollador Full-Stack
                 </h1>
                 <div class="mt-4 flex gap-4 items-center justify-center lg:justify-start ">
-                    <a download="Prueba.pdf" href="https://drive.google.com/file/d/1mHkVd6bVCAecI_8ie5K0gAfsVO89LUKj/view?usp=sharing" class="bg-blue-500 px-4 py-1 transition font-semibold rounded-md text-slate-900 hover:bg-blue-300 hover:scale-105">Descargar HDV</a>
+                    <a href="https://drive.google.com/file/d/1mHkVd6bVCAecI_8ie5K0gAfsVO89LUKj/view?usp=sharing" class="bg-blue-500 px-4 py-1 transition font-semibold rounded-md text-slate-900 hover:bg-blue-300 hover:scale-105" target="_blank">Ver HDV</a>
                     <a href="https://www.linkedin.com/in/v%C3%ADctor-noriega-565b4428a" target="_blank" class="hover:fill-blue-300 transition fill-blue-500 hover:scale-105">
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="35" height="35" viewBox="0 0 30 30">
                             <path d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z"></path>
