--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -25,7 +25,7 @@
             </div>
             <div class="flex flex-col gap-2">
                 <h2 class="text-blue-500 text-2xl font-semibold mt-4">Habilidades</h2>
-                <div class="flex fle-wrap gap-4 items-center">
+                <div class="flex fle-wrap gap-4 items-center z-0">
                     
                     <div class="flex flex-col gap-2">
                         <img src="assets/img/html-icon.svg" alt="" class="animated-image w-13 h-14">
