--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -25,26 +25,26 @@
             </div>
             <div class="flex flex-col gap-2">
                 <h2 class="text-blue-500 text-2xl font-semibold mt-4">Habilidades</h2>
-                <div class="flex fle-wrap gap-4 items-center z-0">
+                <div class="flex fle-wrap gap-4 items-center">
                     
-                    <div class="flex flex-col gap-2">
+                    <div class="flex flex-col gap-2  z-0">
                         <img src="assets/img/html-icon.svg" alt="" class="animated-image w-13 h-14">
                     </div>
-                    <div class="flex flex-col gap-2">
+                    <div class="flex flex-col gap-2  z-0">
                         <img src="assets/img/css-icon.svg" alt="" class="animated-image w-13 h-14">
                     </div>
-                    <div class="flex flex-col gap-2">
+                    <div class="flex flex-col gap-2  z-0">
                         <img src="assets/img/node-icon.svg" alt="" class="animated-image w-12 h-13">
                     </div>
-                    <div class="flex flex-col gap-2">
+                    <div class="flex flex-col gap-2  z-0">
                         <img src="assets/img/astro-icon.svg" alt="" class="animated-image w-9 h-9"/>
                         
                     </div>
-                    <div class="flex flex-col gap-2">
+                    <div class="flex flex-col gap-2  z-0">
                         <img src="assets/img/react-icon.svg" alt="" class="animated-image w-12 h-13">
                         
                     </div>
-                    <div class="flex flex-col gap-2">
+                    <div class="flex flex-col gap-2 z-0">
                         <img src="assets/img/tailwind-icon.svg" alt="" class="animated-image w-12 h-13">
                     </div>
                 </div>
