--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,7 +3,7 @@
         <div class="text-start">
             <h1 class="text-4xl font-bold text-blue-500">Sobre mí</h1>
             <p class="text-slate-100 text-lg font-normal mt-1">
-                Hola, soy Victor Noriega, un apasionado desarrollador web frontend y estudiante de octavo semestre de Ingeniería de Sistemas en Colombia. Mi enfoque se centra en la creación de experiencias web impactantes y funcionales.
+                Hola, soy Victor Noriega, un apasionado desarrollador web frontend con un amplio conocimiento en backend, también soy estudiante de octavo semestre de Ingeniería de Sistemas en Colombia. Mi enfoque se centra en la creación de experiencias web impactantes y funcionales.
                 Me considero una persona totalmente autónoma y con una gran capacidad de aprendizaje. 
             </p>
         </div>
@@ -60,6 +60,7 @@
 .animated-image {
     transform-style: preserve-3d; /* Indica que se debe preservar la transformación 3D en el elemento hijo */
     animation: rotateContinous 10s linear infinite; /* Define la animación con nombre moveLeftRight, 4 segundos de duración, lineal y repetición infinita */
+    z-index: 2;
 }
 
 @keyframes rotateContinous {
