--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -6,7 +6,7 @@
                     Hola, <span class="text-2xl text-blue-500">soy Víctor Noriega.👋</span>
                 </h1>
                 <h1 class="text-slate-100 text-5xl font-bold">
-                    Desarrollador Full-Stack
+                    Desarrollador Front-End
                 </h1>
                 <div class="mt-4 flex gap-4 items-center justify-center lg:justify-start ">
                     <a href="https://drive.google.com/file/d/1mHkVd6bVCAecI_8ie5K0gAfsVO89LUKj/view?usp=sharing" class="bg-blue-500 px-4 py-1 transition font-semibold rounded-md text-slate-900 hover:bg-blue-300 hover:scale-105" target="_blank">Ver HDV</a>
