--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -57,9 +57,9 @@
 <style is:inline>
 
 
-.aanimated-image {
+.animated-image {
     transform-style:preserve-3d; /* Indica que se debe preservar la transformación 3D en el elemento hijo */
-    animation: rotateContinous 10s linear infinite; /* Define la animación con nombre moveLeftRight, 4 segundos de duración, lineal y repetición infinita */
+    animation: rotateContinous 10s linear initial; /* Define la animación con nombre moveLeftRight, 4 segundos de duración, lineal y repetición infinita */
 }
 
 @keyframes rotateContinous {
