--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -59,8 +59,7 @@
 
 .animated-image {
     transform-style:preserve-3d; /* Indica que se debe preservar la transformación 3D en el elemento hijo */
-    animation: rotateContinous 10s linear infinite; /* Define la animación con nombre moveLeftRight, 4 segundos de duración, lineal y repetición infinita */
-    z-index: 900;
+    animation: rotateContinous 10s linear infinite z-index: 900;; /* Define la animación con nombre moveLeftRight, 4 segundos de duración, lineal y repetición infinita */
 }
 
 @keyframes rotateContinous {
