--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -58,18 +58,15 @@
 
 
 .animated-image {
-    transform-style:preserve-3d; /* Indica que se debe preservar la transformación 3D en el elemento hijo */
     animation: rotateContinous 10s linear infinite; /* Define la animación con nombre moveLeftRight, 4 segundos de duración, lineal y repetición infinita */
 }
 
 @keyframes rotateContinous {
-    0% {
-        transform: rotateY(0);
-        z-index: 1;
+    from {
+        transform: rotatey(0);
     }
-    100% {
-        transform: rotateY(360deg); /* Regresa la imagen a la posición inicial y rota 360 grados en el eje Y */
-        z-index: 1;
+    to {
+        transform: rotatey(360deg); /* Regresa la imagen a la posición inicial y rota 360 grados en el eje Y */
     }
 }
 </style>
