--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -58,6 +58,7 @@
 
 
 .animated-image {
+    z-index: 1;
     animation: rotateContinous 10s linear infinite; /* Define la animación con nombre moveLeftRight, 4 segundos de duración, lineal y repetición infinita */
 }
 
