--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 <header class=" z-10 fixed bg-slate-950 py-8 w-full border-b border-slate-100 flex items-center justify-center" >
-    <nav class="flex justify-between max-w-4xl w-5/6 transition-all">
+    <nav class="flex justify-between max-w-4xl w-5/6 transition-all z-10">
         <a href="/" class="font-bold text-2xl hover:scale-110 text-blue-500 hover:text-blue-300 transition-all duration-500">vnoriega</a>
         <button id="buttonMenu" class="text-slate-100 transition-all duration-500 md:hidden">
             
