--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -28,46 +28,27 @@
                 <div class="flex fle-wrap gap-4 items-center">
                     
                     <div class="flex flex-col gap-2">
-                        <img src="assets/img/html-icon.svg" alt="" class="animated-image w-13 h-14">
+                        <img src="assets/img/html-icon.svg" alt="" class="w-13 h-14">
                     </div>
                     <div class="flex flex-col gap-2">
-                        <img src="assets/img/css-icon.svg" alt="" class="animated-image w-13 h-14">
+                        <img src="assets/img/css-icon.svg" alt="" class="w-13 h-14">
                     </div>
                     <div class="flex flex-col gap-2">
-                        <img src="assets/img/node-icon.svg" alt="" class="animated-image w-12 h-13">
+                        <img src="assets/img/node-icon.svg" alt="" class="w-12 h-13">
                     </div>
                     <div class="flex flex-col gap-2">
-                        <img src="assets/img/astro-icon.svg" alt="" class="animated-image w-9 h-9"/>
+                        <img src="assets/img/astro-icon.svg" alt="" class="w-9 h-9"/>
                         
                     </div>
                     <div class="flex flex-col gap-2">
-                        <img src="assets/img/react-icon.svg" alt="" class="animated-image w-12 h-13">
+                        <img src="assets/img/react-icon.svg" alt="" class="w-12 h-13">
                         
                     </div>
                     <div class="flex flex-col gap-2">
-                        <img src="assets/img/tailwind-icon.svg" alt="" class="animated-image w-12 h-13">
+                        <img src="assets/img/tailwind-icon.svg" alt="" class="w-12 h-13">
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-
-<style is:inline>
-
-
-.animated-image {
-    z-index: 1;
-    animation: rotateContinous 10s linear infinite; /* Define la animación con nombre moveLeftRight, 4 segundos de duración, lineal y repetición infinita */
-}
-
-@keyframes rotateContinous {
-    from {
-        transform: rotatey(0);
-    }
-    to {
-        transform: rotatey(360deg); /* Regresa la imagen a la posición inicial y rota 360 grados en el eje Y */
-    }
-}
-</style>
