--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -19,6 +19,7 @@
                 <h2 class="text-blue-500 text-2xl font-semibold mt-4">Cursos</h2>
                 <ol class=" marker:text-blue-500 list-disc flex flex-row flex-wrap lg:flex-col gap-5 lg:gap-4 py-2">
                     <li class="ml-4 text-slate-100 text-lg">Programación Web desde Cero</li>
+                    <li class="ml-4 text-slate-100 text-lg">Responsive Web Design</li>
                     <li class="ml-4 text-slate-100 text-lg">Back End Development and Apis</li>
                     <li class="ml-4 text-slate-100 text-lg">Github Foundations</li>
                 </ol>
