--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	
-	<body class="bg-slate-950 margin-0">
+	<body class="bg-slate-950 margin-0" id="body">
 		<Header/>
 		<main>
 			<slot />
