--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,4 +1,4 @@
-<section class="min-h-screen" id="projects">
+<section class="min-h-screen" id="proyectos">
     <div class="m-auto w-5/6 max-w-[1000px] flex flex-col py-28 ">
         <h1 class="text-4xl text-blue-500 font-semibold ">Proyectos</h1>
         <div class="grid grid-cols lg:grid-cols-3 gap-5 mt-4">
