--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -31,7 +31,7 @@
                 <img src="assets/img/YourTasks.png" alt="Captura de pantalla del proyecto" class="border-b border-slate-600">
                 <h1 class="text-slate-100  text-xl font-semibold pt-2 px-3">YourTasks</h1>
                 <p class="text-slate-400 text-sm px-3">
-                    Pagina web en la que puedes visualizar tus tareas y gestionar cada una de ellas, incluye un iniciar sesión y un registrar usuario.
+                    Página web en la que puedes visualizar tus tareas y gestionar cada una de ellas, incluye un iniciar sesión y un registrar usuario, pagina elaborada con tutorial de FaztCode.
                 </p>
                 <div class="flex gap-2 px-3 py-2">
                     <div class="bg-sky-500/40 py-1 px-2 items-center rounded-lg">
@@ -52,7 +52,7 @@
             <a href="https://github.com/vnoriega10/easy-chat" target="_blank" class=" relative overflow-hidden  h-auto rounded-md pb-5 bg-slate-900 hover:bg-slate-800">
                 <img src="assets/img/easychat.png" alt="Captura de pantalla del proyecto">
                 <h1 class="text-slate-100  text-xl font-semibold pt-2 px-3">Easy Chat</h1>
-                <p class="text-slate-400 text-sm px-3">Chat en tiempo real, los usuarios pueden enviar mensajes de texto en un entorno fácil de usar.
+                <p class="text-slate-400 text-sm px-3">Chat en tiempo real, los usuarios pueden enviar mensajes de texto en un entorno fácil de usar, página elaborada con tutorial de midudev.
                 </p>
                 <div class="px-3 flex gap-2 py-2">
                     <div class="bg-slate-100 py-1 px-2 items-center rounded-lg">
